--- a/M04/Geo-Location/package.json
+++ b/M04/Geo-Location/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "expo": "~52.0.43",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-maps": "^1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
